src/objects/FoodDetail__c.object
<CustomObject>
    <fields>
        <fullName>AccountMasterRef__c</fullName>
        <label>会計商品</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipName>ProdFoodDetailRef</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AccountMasterSubRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>料理明細</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>料理ブレイク (料理明細)</relationshipLabel>
        <relationshipName>ProdSubFoodDetailRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BreakName__c</fullName>
        <label>明細名</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DetailType__c</fullName>
        <label>明細タイプ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>前菜</fullName>
                </value>
                <value>
                    <fullName>お椀</fullName>
                </value>
                <value>
                    <fullName>お造り</fullName>
                </value>
                <value>
                    <fullName>焼物</fullName>
                </value>
                <value>
                    <fullName>合肴</fullName>
                </value>
                <value>
                    <fullName>煮物</fullName>
                </value>
                <value>
                    <fullName>食事</fullName>
                </value>
                <value>
                    <fullName>デザート</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderNo__c</fullName>
        <label>順番</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>料理ブレイク</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>FD-S-{00000000}</displayFormat>
        <label>料理明細番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>